<resources>
    <string name="stage">Stage</string>
    <string name="achievement">Achievement</string>
    <string name="sign_in">sign-in</string>
    <string name="card_customize">card customize</string>
    <string name="score">score</string>
    <string name="time">time</string>
    <string name="upload_image">upload Image</string>
    <string name="en">en</string>
    <string name="app_name">Memory Game</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>
    <string name="total_score">Total Score:</string>
    <string name="camera">camera</string>
    <string name="gallery">Gallery</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="not_have_account_signup">Not have account? <b>SignUp</b></string>
    <string name="forget_password">Forget password?</string>
    <string name="Please_wait">Please wait</string>
    <string name="Logging_in">Logging in...</string>
    <string name="Invalid_email_format">Invalid email format</string>
    <string name="Please_enter_password">Please enter password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>