<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainFragment">

    <Button
        android:id="@+id/language"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/en"
        android:background="@drawable/btn_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/stage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:text="@string/stage"
        android:background="@drawable/btn_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/achivFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/achievement"
        android:background="@drawable/btn_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/card_customize"
        android:background="@drawable/btn_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/sin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/sign_in"
        android:background="@drawable/btn_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/stage_mode"
        android:layout_width="300dp"
        android:layout_height="380dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="61dp"
        android:visibility="invisible"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/easy_lvl"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:text="Level 1"
            android:background="@drawable/btn_shape"
            android:layout_gravity="center|top"
            android:layout_marginTop="50dp" />

        <Button
            android:id="@+id/medium_lvl"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:text="Level 2"
            android:background="@drawable/btn_shape"

            android:layout_gravity="center"
          />

        <Button
            android:id="@+id/hard_lvl"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_shape"
            android:text="Level 3"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"/>
        <ImageButton
            android:id="@+id/X1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="250dp"
            android:background="@drawable/ic_baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/customCard"
        android:layout_width="300dp"
        android:layout_height="340dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="61dp"
        android:visibility="invisible"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/X"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_close_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/imageLoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_launcher_background"
                android:importantForAutofill="auto"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/upload"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                android:layout_marginTop="180dp"
                android:visibility="visible"
                android:background="@drawable/btn_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:id="@+id/delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/ic_baseline_delete_outline_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>